<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="30dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tv_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_elegir" />

    <RadioGroup
        android:id="@+id/rg_opciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_msg"
        android:layout_marginBottom="40dp">

        <RadioButton
            android:id="@+id/rb_basica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_basica" />

        <RadioButton
            android:id="@+id/rb_cientifica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_cientifica" />

        <RadioButton
            android:id="@+id/rb_programador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_programador" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rg_opciones"
        android:text="@string/btn_calcular" />
</RelativeLayout>